--- a/YaLearn/Controllers/Cells/xib/HomeBannerTopCell.xib
+++ b/YaLearn/Controllers/Cells/xib/HomeBannerTopCell.xib
@@ -4,63 +4,51 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HomeBannerTopCell" rowHeight="159" id="2nZ-Kk-RaS" userLabel="HomeBannerTopCell" customClass="HomeBannerTopCell" customModule="YaLearn" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="159"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HomeBannerTopCell" id="2nZ-Kk-RaS" userLabel="HomeBannerTopCell" customClass="HomeBannerTopCell" customModule="YaLearn" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="400" height="160"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2nZ-Kk-RaS" id="7gC-K0-Olj">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="159"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="160"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rJI-cb-47J">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="159"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="20f-78-K5e">
-                                <rect key="frame" x="10" y="10.5" width="200" height="138"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="6IR-Pw-naq"/>
-                                    <constraint firstAttribute="height" constant="139" id="Szz-jM-nuX"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqF-j6-73X">
-                                <rect key="frame" x="230" y="45.5" width="33" height="18"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vU3-eL-Y7O">
-                                <rect key="frame" x="230" y="73.5" width="55.5" height="12"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="20f-78-K5e">
+                        <rect key="frame" x="40" y="30.5" width="100" height="99"/>
                         <constraints>
-                            <constraint firstItem="vU3-eL-Y7O" firstAttribute="top" secondItem="fqF-j6-73X" secondAttribute="bottom" constant="10" id="4fj-7G-EHj"/>
-                            <constraint firstAttribute="height" constant="159" id="5I7-g5-FMB"/>
-                            <constraint firstItem="vU3-eL-Y7O" firstAttribute="leading" secondItem="20f-78-K5e" secondAttribute="trailing" constant="20" id="BHT-mU-XmY"/>
-                            <constraint firstAttribute="bottom" secondItem="20f-78-K5e" secondAttribute="bottom" constant="10" id="GZi-NL-W0u"/>
-                            <constraint firstItem="fqF-j6-73X" firstAttribute="leading" secondItem="20f-78-K5e" secondAttribute="trailing" constant="20" id="L7T-m4-A1j"/>
-                            <constraint firstItem="vU3-eL-Y7O" firstAttribute="centerY" secondItem="rJI-cb-47J" secondAttribute="centerY" id="QxU-3C-VxY"/>
-                            <constraint firstAttribute="width" constant="414" id="RDZ-C0-YNF"/>
-                            <constraint firstItem="20f-78-K5e" firstAttribute="top" secondItem="rJI-cb-47J" secondAttribute="top" constant="10" id="rVX-sj-K1z"/>
-                            <constraint firstItem="20f-78-K5e" firstAttribute="leading" secondItem="rJI-cb-47J" secondAttribute="leading" constant="10" id="ux0-pB-mzp"/>
+                            <constraint firstAttribute="width" constant="100" id="55A-Ax-sUp"/>
+                            <constraint firstAttribute="height" priority="990" constant="100" id="DBK-cE-Pv4"/>
                         </constraints>
-                    </view>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vU3-eL-Y7O">
+                        <rect key="frame" x="160" y="74" width="55.5" height="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqF-j6-73X">
+                        <rect key="frame" x="160" y="46" width="33" height="18"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="rJI-cb-47J" firstAttribute="top" secondItem="7gC-K0-Olj" secondAttribute="top" id="QW3-v5-fU4"/>
-                    <constraint firstAttribute="bottom" secondItem="rJI-cb-47J" secondAttribute="bottom" id="Z8j-Os-c0Q"/>
-                    <constraint firstAttribute="trailing" secondItem="rJI-cb-47J" secondAttribute="trailing" id="bDg-si-YA3"/>
-                    <constraint firstItem="rJI-cb-47J" firstAttribute="leading" secondItem="7gC-K0-Olj" secondAttribute="leading" id="wcx-98-Hr6"/>
+                    <constraint firstItem="20f-78-K5e" firstAttribute="leading" secondItem="7gC-K0-Olj" secondAttribute="leading" constant="40" id="1i9-ZM-h66"/>
+                    <constraint firstItem="vU3-eL-Y7O" firstAttribute="top" secondItem="fqF-j6-73X" secondAttribute="bottom" constant="10" id="GqI-Eu-gYd"/>
+                    <constraint firstItem="vU3-eL-Y7O" firstAttribute="centerY" secondItem="7gC-K0-Olj" secondAttribute="centerY" id="Mn7-3V-vz6"/>
+                    <constraint firstItem="fqF-j6-73X" firstAttribute="leading" secondItem="20f-78-K5e" secondAttribute="trailing" constant="20" id="PPh-Jj-qsc"/>
+                    <constraint firstAttribute="bottom" secondItem="20f-78-K5e" secondAttribute="bottom" constant="30" id="hCB-Yw-dAL"/>
+                    <constraint firstItem="20f-78-K5e" firstAttribute="top" secondItem="7gC-K0-Olj" secondAttribute="top" constant="30" id="s56-uj-7nx"/>
+                    <constraint firstItem="vU3-eL-Y7O" firstAttribute="leading" secondItem="20f-78-K5e" secondAttribute="trailing" constant="20" id="uib-c6-pl3"/>
                 </constraints>
             </tableViewCellContentView>
+            <viewLayoutGuide key="safeArea" id="ml0-VW-3Fg"/>
             <connections>
                 <outlet property="CellDescp" destination="vU3-eL-Y7O" id="ajd-tq-Oye"/>
                 <outlet property="CellImage" destination="20f-78-K5e" id="wX8-0z-lqd"/>
