--- a/YaLearn/Controllers/Cells/xib/inCollectionCell.xib
+++ b/YaLearn/Controllers/Cells/xib/inCollectionCell.xib
@@ -19,10 +19,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="folder.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="kyr-0q-se6">
-                        <rect key="frame" x="5" y="5.5" width="104" height="150"/>
+                        <rect key="frame" x="0.0" y="0.5" width="114" height="160"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8WH-0U-myv">
-                        <rect key="frame" x="36" y="70" width="42" height="21"/>
+                        <rect key="frame" x="36" y="130" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -30,12 +30,12 @@
                 </subviews>
                 <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="8WH-0U-myv" firstAttribute="centerY" secondItem="MwL-Gj-YE2" secondAttribute="centerY" id="1pl-Q7-5Yi"/>
-                    <constraint firstItem="kyr-0q-se6" firstAttribute="leading" secondItem="MwL-Gj-YE2" secondAttribute="leading" constant="5" id="RE7-zP-qpq"/>
-                    <constraint firstAttribute="trailing" secondItem="kyr-0q-se6" secondAttribute="trailing" constant="5" id="ZaQ-Ke-8CB"/>
+                    <constraint firstItem="8WH-0U-myv" firstAttribute="centerY" secondItem="MwL-Gj-YE2" secondAttribute="centerY" constant="60" id="1pl-Q7-5Yi"/>
+                    <constraint firstItem="kyr-0q-se6" firstAttribute="leading" secondItem="MwL-Gj-YE2" secondAttribute="leading" id="RE7-zP-qpq"/>
+                    <constraint firstAttribute="trailing" secondItem="kyr-0q-se6" secondAttribute="trailing" id="ZaQ-Ke-8CB"/>
                     <constraint firstItem="8WH-0U-myv" firstAttribute="centerX" secondItem="MwL-Gj-YE2" secondAttribute="centerX" id="kBF-gF-1wk"/>
-                    <constraint firstItem="kyr-0q-se6" firstAttribute="top" secondItem="MwL-Gj-YE2" secondAttribute="top" constant="5" id="o2m-To-p9Y"/>
-                    <constraint firstAttribute="bottom" secondItem="kyr-0q-se6" secondAttribute="bottom" constant="5" id="oCL-bO-qVX"/>
+                    <constraint firstItem="kyr-0q-se6" firstAttribute="top" secondItem="MwL-Gj-YE2" secondAttribute="top" id="o2m-To-p9Y"/>
+                    <constraint firstAttribute="bottom" secondItem="kyr-0q-se6" secondAttribute="bottom" id="oCL-bO-qVX"/>
                 </constraints>
             </collectionViewCellContentView>
             <viewLayoutGuide key="safeArea" id="iiO-W5-hWd"/>
