--- a/YaLearn/Controllers/Storyboards/MoreStories.storyboard
+++ b/YaLearn/Controllers/Storyboards/MoreStories.storyboard
@@ -11,23 +11,37 @@
         <!--PDFReader-->
         <scene sceneID="6uN-bn-GFP">
             <objects>
-                <viewController restorationIdentifier="PDFReader" storyboardIdentifier="PDFReader" id="4rB-BY-xoa" userLabel="PDFReader" customClass="PDFReader" customModule="YaLearn" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="PDFReaderVC" storyboardIdentifier="PDFReaderVC" id="4rB-BY-xoa" userLabel="PDFReader" customClass="PDFReaderVC" customModule="YaLearn" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="a4G-3d-bvZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gGa-Sy-omi" customClass="PDFView">
-                                <rect key="frame" x="49" y="0.0" width="326" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gGa-Sy-omi" customClass="PDFView">
+                                <rect key="frame" x="8" y="8" width="359" height="604"/>
+                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="gGa-Sy-omi" secondAttribute="height" multiplier="359:604" id="SGc-Zj-zR0"/>
+                                </constraints>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qj4-Up-lti" customClass="PDFThumbnailView">
-                                <rect key="frame" x="0.0" y="0.0" width="41" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qj4-Up-lti" customClass="PDFThumbnailView">
+                                <rect key="frame" x="8" y="620" width="359" height="39"/>
+                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Qj4-Up-lti" secondAttribute="height" multiplier="359:39" id="8Do-fa-CS4"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Qj4-Up-lti" firstAttribute="leading" secondItem="1jW-8i-wKY" secondAttribute="leading" constant="8" id="Cpf-Kd-ES8"/>
+                            <constraint firstItem="gGa-Sy-omi" firstAttribute="leading" secondItem="1jW-8i-wKY" secondAttribute="leading" constant="8" id="Cyx-Pn-d1E"/>
+                            <constraint firstItem="gGa-Sy-omi" firstAttribute="top" secondItem="1jW-8i-wKY" secondAttribute="top" constant="8" id="Q3B-vs-nxE"/>
+                            <constraint firstItem="1jW-8i-wKY" firstAttribute="bottom" secondItem="Qj4-Up-lti" secondAttribute="bottom" constant="8" id="aEj-ID-2dC"/>
+                            <constraint firstItem="Qj4-Up-lti" firstAttribute="top" secondItem="gGa-Sy-omi" secondAttribute="bottom" constant="8" id="dVg-yg-xeu"/>
+                            <constraint firstItem="1jW-8i-wKY" firstAttribute="trailing" secondItem="Qj4-Up-lti" secondAttribute="trailing" constant="8" id="fDD-TC-YET"/>
+                            <constraint firstItem="Qj4-Up-lti" firstAttribute="top" secondItem="gGa-Sy-omi" secondAttribute="bottom" constant="8" id="nnt-uN-FIG"/>
+                            <constraint firstItem="1jW-8i-wKY" firstAttribute="trailing" secondItem="gGa-Sy-omi" secondAttribute="trailing" constant="8" id="ujR-Pm-ahq"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="1jW-8i-wKY"/>
                     </view>
                     <connections>
@@ -39,20 +53,98 @@
             </objects>
             <point key="canvasLocation" x="196" y="156.97151424287858"/>
         </scene>
-        <!--View Controller-->
+        <!--Single BookVC-->
         <scene sceneID="Q10-us-yZe">
             <objects>
-                <viewController restorationIdentifier="singleBook" storyboardIdentifier="singleBook" id="hZf-Aa-bjH" sceneMemberID="viewController">
+                <viewController restorationIdentifier="singleBookVC" storyboardIdentifier="singleBookVC" id="hZf-Aa-bjH" customClass="singleBookVC" customModule="YaLearn" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="i9X-oW-SVV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZLo-th-gIV">
+                                <rect key="frame" x="70" y="21" width="235" height="381.5"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c9D-g8-lqi">
+                                <rect key="frame" x="159" y="412" width="57" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oyd-4j-sbh">
+                                <rect key="frame" x="170" y="567" width="35" height="30"/>
+                                <state key="normal" title="Read"/>
+                                <connections>
+                                    <action selector="ReadButtAction:" destination="hZf-Aa-bjH" eventType="touchUpInside" id="pZM-Fa-iwq"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="268-Ea-QaE">
+                                <rect key="frame" x="68" y="527" width="239" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e0t-fg-rqp">
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                        <state key="normal" title="Fav"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfa-oq-7d9">
+                                        <rect key="frame" x="65" y="0.0" width="38" height="30"/>
+                                        <state key="normal" title="down"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wty-p4-C0F">
+                                        <rect key="frame" x="138" y="0.0" width="30" height="30"/>
+                                        <state key="normal" title="shar"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y4J-dJ-h4a">
+                                        <rect key="frame" x="203" y="0.0" width="36" height="30"/>
+                                        <state key="normal" title="Repo"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eQ9-B7-3EM">
+                                <rect key="frame" x="70" y="449" width="235" height="70"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Szn-h0-Wro">
+                                        <rect key="frame" x="96.5" y="10" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstItem="Szn-h0-Wro" firstAttribute="centerX" secondItem="eQ9-B7-3EM" secondAttribute="centerX" id="SX4-c4-G6J"/>
+                                    <constraint firstAttribute="height" constant="70" id="dmb-Jc-lxW"/>
+                                    <constraint firstItem="Szn-h0-Wro" firstAttribute="top" secondItem="eQ9-B7-3EM" secondAttribute="top" constant="10" id="wb7-IL-O3R"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="268-Ea-QaE" firstAttribute="centerX" secondItem="i9X-oW-SVV" secondAttribute="centerX" id="1Hl-Fo-9us"/>
+                            <constraint firstItem="Oyd-4j-sbh" firstAttribute="top" secondItem="268-Ea-QaE" secondAttribute="bottom" constant="10" id="1NV-NL-3Qj"/>
+                            <constraint firstItem="268-Ea-QaE" firstAttribute="top" secondItem="eQ9-B7-3EM" secondAttribute="bottom" constant="8" id="AvR-xZ-pYf"/>
+                            <constraint firstItem="ZLo-th-gIV" firstAttribute="leading" secondItem="KDo-HZ-K4k" secondAttribute="leading" constant="70" id="BdS-gg-ZBr"/>
+                            <constraint firstItem="Oyd-4j-sbh" firstAttribute="centerX" secondItem="i9X-oW-SVV" secondAttribute="centerX" id="HEl-5M-4fQ"/>
+                            <constraint firstItem="KDo-HZ-K4k" firstAttribute="trailing" secondItem="ZLo-th-gIV" secondAttribute="trailing" constant="70" id="Hp1-lx-e8i"/>
+                            <constraint firstItem="ZLo-th-gIV" firstAttribute="top" secondItem="KDo-HZ-K4k" secondAttribute="top" constant="20" id="IGe-P9-rtU"/>
+                            <constraint firstItem="eQ9-B7-3EM" firstAttribute="leading" secondItem="KDo-HZ-K4k" secondAttribute="leading" constant="70" id="OhR-JR-9df"/>
+                            <constraint firstItem="KDo-HZ-K4k" firstAttribute="bottom" secondItem="Oyd-4j-sbh" secondAttribute="bottom" constant="70" id="T3t-iO-A6M"/>
+                            <constraint firstItem="c9D-g8-lqi" firstAttribute="centerX" secondItem="i9X-oW-SVV" secondAttribute="centerX" id="aOL-bn-Kqn"/>
+                            <constraint firstItem="c9D-g8-lqi" firstAttribute="top" secondItem="ZLo-th-gIV" secondAttribute="bottom" constant="8" id="glf-YI-dgd"/>
+                            <constraint firstItem="eQ9-B7-3EM" firstAttribute="centerX" secondItem="i9X-oW-SVV" secondAttribute="centerX" id="gnb-jh-LeQ"/>
+                            <constraint firstItem="ZLo-th-gIV" firstAttribute="centerX" secondItem="i9X-oW-SVV" secondAttribute="centerX" id="mry-gE-C51"/>
+                            <constraint firstItem="KDo-HZ-K4k" firstAttribute="trailing" secondItem="eQ9-B7-3EM" secondAttribute="trailing" constant="70" id="vXh-V1-iAl"/>
+                            <constraint firstItem="eQ9-B7-3EM" firstAttribute="top" secondItem="c9D-g8-lqi" secondAttribute="bottom" constant="8" id="w9M-av-qco"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="KDo-HZ-K4k"/>
                     </view>
+                    <connections>
+                        <outlet property="PDFthumbnail" destination="ZLo-th-gIV" id="nPG-Io-xpT"/>
+                        <outlet property="bookDescrip" destination="Szn-h0-Wro" id="5g2-s8-P9e"/>
+                        <outlet property="booktitle" destination="c9D-g8-lqi" id="Ywf-pt-gF8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jU2-fG-vdb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="922" y="157"/>
+            <point key="canvasLocation" x="920.79999999999995" y="156.97151424287858"/>
         </scene>
     </scenes>
 </document>
